--- a/dating-platform/package.json
+++ b/dating-platform/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
-    "next": "15.1.0",
+    "next": "^15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "clsx": "^2.1.0",
@@ -23,7 +23,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
